# kinzie

./: .gitignore  CLAUDE.md  MONITORING.md  README.md  __init__.py  conftest.py  daemon.py  gemini.md  pyproject.toml  requirements.txt
.hypothesis/constants/: 0b10723fa05110fc  115b6ecc41e1349e  1401eddc0c4f2cb1  15d4e3fd94992c36  2228cf58a34f32da  262cf384f4353d13  2e0be6cde087b765  33846c8272b73965  363c225b986d78f0  3895fd86a196f6cf  3e03a474dd2dcfe4  4c06307f67e5500f  4ce1602e41f29275  4eae2e21aba80fb9  5151fba281b456b6  567f562cb01378dc  586419ba947d193d  5d1c425c81c524fa  6aad73536c102057  6ce576c33a168dc8  6e4103110f76190b  6f52b1b48bfec33f  75b5299a4c429e0a  8af17aa50e439559  9093c237d4d82aa2  96a9e9b955983405  a62a0825db6a86e4  b1dfa5a592cb7b81  b6a71dcfda6950be  c7c7f0520be9ca07  da39a3ee5e6b4b0d  e45b055ddb7b2ba0  ea1642c39cb320ca  ea17606e27f067a0  f05f929423cc77aa  f5c4f56cda69672c  fad8f3d85aacead9
config/: __init__.py  hyperparams.yaml
core/: __init__.py  alert.py  db.py  environment.py  kalshi_client.py  logging.py  models.py
data/raw/: amazon_jwo_settlement.csv  freedompay_settlement.csv  shift4_settlement.csv
deploy/: Dockerfile  docker-compose.yml  gce_setup.sh  microstructure.service
docs/: architecture.md  roadmap.md
research/: live_roi.py
scripts/: check_env.py  run_backtest.py  train_model.py
src/clearline/: __init__.py  config.py  pipeline.py  (+1 more)
tests/: test_crypto_feed_agent.py  test_crypto_l2_feed.py  test_db.py  test_deeplob.py  test_features.py  test_l2_datamodule.py  test_pricing.py  test_risk_agent.py  test_scanner_agent.py
(+21 files in other folders)
