[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "microstructure"
version = "1.0.0"
description = "Kraken L2 microstructure ingestion and DeepLOB research scaffold."
readme = "README.md"
requires-python = ">=3.11"
keywords = ["microstructure", "limit-order-book", "kraken", "deeplob", "research"]
dependencies = [
    "aiohttp>=3.9",
    "lightning>=2.2",
    "python-dotenv>=1.0.0",
    "torch>=2.2",
    "websockets>=14.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "mypy",
]

[tool.hatch.build.targets.wheel]
packages = ["strategies", "core"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "ANN", "E402"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["core.*", "strategies.*"]
strict = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --tb=short"

[tool.coverage.run]
source = ["core", "strategies"]
omit = ["tests/*", "research/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
